--- a/sass/components/__banner.scss
+++ b/sass/components/__banner.scss
@@ -56,9 +56,9 @@
 
 
 .opacity{
-    Width:100%;
-    Height:600px;
-    Top:80px;
+    width:100%;
+    height:600px;
+    top:80px;
     background: rgba(47, 48, 58, 0.4);
     position: absolute;
 }
