--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,3 +8,9 @@
 @import 'components/footer';
 @import 'components/form';
 @import 'utils/variables';
+@import 'components/body';
+@import 'components/header';
+@import 'components/buttons';
+@import 'components/main';
+@import 'components/footer';
+@import 'utils/variables';
