--- a/sass/components/_banner.scss
+++ b/sass/components/_banner.scss
@@ -17,7 +17,7 @@
     &__title{
         width: 696px;
         height: 50px;
-        color: var(--primary-white);
+        color: getColor('primaryWhite');
         font-family: 'Roboto';
         font-style: normal;
         font-weight: 900;
@@ -29,9 +29,9 @@
     }
 
     &__button{
-        width: 261px;
+   width: 261px;
    height: 50px;
-   background: var(--primary-blue);
+   background: getColor('primaryBlue');
    border: none;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
    border-radius: 4px;
@@ -42,14 +42,14 @@
    font-weight: 700;
    font-size: 16px;
    line-height: 30px;
-   color: var(--primary-white);
+   color: getColor('primaryWhite');
    cursor: pointer; 
    transition: 250ms all cubic-bezier(0.4,0,0.2,1); 
 
 
         &:hover{
-            background-color: var(--primary-white);
-    color: var(--primary-black);
+            background-color:getColor('primaryWhite');
+            color: getColor('primaryBlack');
         }
     }
 }
