--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -18,19 +18,14 @@
         border: none;
         border-radius: 4px;
         cursor:pointer;
-
-        &--active:hover{
-            background-color: var(--primary-blue);
-            color: var(--primary-white);
         }
-        }
-    
+}
 
-    &__button1{
+    .button1{
         width: 73px;
         margin: 8px;
-        background: var(--primary-blue);
-        color: var(--primary-white);
+        background: getColor('primaryBlue');
+        color: getColor('primaryWhite');
         transition: 250ms all cubic-bezier(0.4,0,0.2,1);
 
         &--active:hover{
@@ -38,33 +33,39 @@
         }
     }
 
-    &__button2{
+.button2{
         width: 128px;
         margin: 8px;
-        background: var(--second-white);
+        background:getColor('secondWhite');
         transition: 250ms all cubic-bezier(0.4,0,0.2,1);
 
 
     }
 
-    &__button3{
+    .button3{
         width: 145px;
         margin: 8px;
-        background: var(--second-white);
+        background: getColor('secondWhite');
         transition: 250ms all cubic-bezier(0.4,0,0.2,1);
     }
 
-    &__button4{
+    .button4{
         width: 103px;
         margin: 8px;
-        background: var(--second-white);
+        background: getColor('secondWhite');
         transition: 250ms all cubic-bezier(0.4,0,0.2,1);
     }
 
-    &__button5{
+    .button5{
         width: 130px;
         margin: 8px;
-        background: var(--second-white);
+        background: getColor('secondWhite');
         transition: 250ms all cubic-bezier(0.4,0,0.2,1);
     }
-}
+
+    .button{
+        &--active:hover{
+            background-color: getColor('primaryBlue');
+            color:getColor('primaryWhite');
+        }
+    }
