--- a/sass/components/_content.scss
+++ b/sass/components/_content.scss
@@ -19,7 +19,7 @@
         font-size: 14px;
         line-height: 24px;
         letter-spacing: 0.03em;
-        color: var(--primary-grey);
+        color:getColor('primaryGrey');
         text-align: justify;
     }
 
@@ -32,6 +32,6 @@
     line-height: 16px;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: var(--primary-black);
+    color:getColor('primaryBlack');
     }
 }
