--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -2,7 +2,7 @@
 .footer{
     width: 100%;
     height: 252px;
-    background: var(--second-black);
+    background:getColor('secondBlack');
 }
 
 
@@ -22,7 +22,7 @@
         font-size: 26px;
         line-height: 31px;
         letter-spacing: 0.03em;
-        color: var(--primary-blue);
+        color: getColor('primaryBlue');
         text-decoration:none;
     }
 
@@ -36,7 +36,7 @@
         font-size: 14px;
         line-height: 24px;
         letter-spacing: 0.03em;
-        color: var(--primary-white);
+        color: getColor('primaryWhite');
     }
 
 
@@ -57,7 +57,7 @@
 
 
         &--active:hover{
-            color: var(--primary-blue);
+            color: getColor('primaryBlue');
         }
     }
 
@@ -72,7 +72,7 @@
         line-height: 16px;
         letter-spacing: 0.03em;
         text-transform: uppercase;
-        color: var(--primary-white);
+        color:getColor('primaryWhite');
     }
 
 
@@ -98,7 +98,7 @@
         transition: 250ms all cubic-bezier(0.4,0,0.2,1);
 
         &--active:hover{
-            background-color: var(--primary-blue);
+            background-color:getColor('primaryBlue');
         }
     }
 
@@ -119,13 +119,13 @@
 
 
     &__visualization{
-        fill: var(--second-grey);
+        fill: getColor('secondGrey');
         transition: 250ms all cubic-bezier(0.4,0,0.2,1);
 
 
 
         &--active:hover{
-            fill:var(--primary-white);
+            fill:getColor('primaryWhite');
         }
     }
 
@@ -138,7 +138,7 @@
         line-height: 16px;
         letter-spacing: 0.03em;
         text-transform: uppercase;
-        color: var(--primary-white);
+        color:getColor('primaryWhite');
         margin-top:70px;
         margin-left: 93px;
     }
@@ -150,7 +150,7 @@
         border-radius: 4px;
         position: absolute;
         display: block;
-        background-color: var(--second-black);
+        background-color:getColor('secondBlack');
         margin-top:20px;
         width: 300px;
         height: 50px;
@@ -168,7 +168,7 @@
     &__button{
         width:200px;
         height:50px;
-        background: var(--primary-blue);
+        background:getColor('primaryBlue');
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
         border-radius: 4px;
         border:none;
@@ -179,7 +179,7 @@
         font-weight: 700;
         font-size: 16px;
         line-height: 30px;
-        color:var(--primary-white);
+        color:getColor('primaryWhite');
         cursor:pointer;
         transition: 250ms all cubic-bezier(0.4,0,0.2,1);
 
