--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,5 +1,5 @@
 .header{
-    background-color: var(--primary-white); 
+    background-color: getColor('primaryWhite'); 
 }
 
 .navigation{
@@ -22,7 +22,7 @@
     font-size: 26px;
     line-height: 31px;
     letter-spacing: 0.03em;
-    color: var(--primary-blue);
+    color: getColor('primaryBlue');
 }
 
 .navigation-list{
@@ -45,9 +45,9 @@
         font-size: 14px;
         line-height: 16px;
         letter-spacing: 0.02em;
-        color: var(--primary-black);
+        color: getColor('primaryBlack');
         position: relative;
-        background-color: var(--primary-white);
+        background-color: getColor('primaryWhite');
         border:none;
         cursor: pointer;
         transition: 250ms all cubic-bezier(0.4,0,0.2,1);
@@ -56,7 +56,7 @@
             content: " ";
             height: 3px;
             width: 0px;
-            background-color: var(--primary-blue);
+            background-color: getColor('primaryBlue');
             position: absolute;
             left: 0px;
             bottom:-30px;
@@ -64,7 +64,7 @@
 
         }
         &--active:hover{
-            color: var(--primary-blue);
+            color: getColor('primaryBlue');
 
             &::before{
                 width: 100%;
@@ -89,23 +89,23 @@
         font-size: 14px;
         line-height: 16px;
         letter-spacing: 0.02em;
-        color: var(--primary-grey);
+        color: getColor('primaryGrey');
         transition: 250ms all cubic-bezier(0.4,0,0.2,1);
 
         &--active:hover{
-            color:var(--primary-blue);
+            color:getColor('primaryBlue');
         }
     }
 
     &__header-icons{
         margin-right: 10px;
         margin-top: 3px;
-        fill:var(--primary-grey);
+        fill:getColor('primaryGrey');
         cursor:pointer;
         transition: 250ms all cubic-bezier(0.4,0,0.2,1);
 
-        &__active:hover{
-            fill: var(--primary-blue);
+        &--active:hover{
+            fill: getColor('primaryBlue');
         }
     }
 
