--- a/sass/components/_main.scss
+++ b/sass/components/_main.scss
@@ -11,10 +11,10 @@
     &__item{
         width: 370px;
         height: 404px;
-        background-color: var(--primary-white);
+        background-color: getColor('primaryWhite');
         margin-left: auto;
         margin-right: auto;
-        border: 1px solid #EEEEEE;
+        border: 1px solid getColor('secondWhite');
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 0px 0px 4px 4px;
     }
@@ -49,7 +49,7 @@
         font-size: 18px;
         line-height: 28px;
         letter-spacing: 0.03em;
-        color: var(--primary-white);
+        color:getColor('primaryWhite');
     }
 
     &__title-product{
@@ -58,7 +58,7 @@
         font-size: 18px;
         line-height: 36px;
         letter-spacing: 0.06em;
-        color: var(--primary-black);
+        color: getColor('primaryBlack');
         margin-left: 24px;
         margin-top: 20px;
     }
@@ -71,7 +71,7 @@
         font-size: 16px;
         line-height: 30px;
         letter-spacing: 0.03em;
-        color: var(--primary-grey);
+        color:getColor('primaryGrey');
         margin-left: 24px;
     }
 }
